RTT-499: Upgrading Java from 11 to 17, and affected dependencies.