@@ -43,7 +43,7 @@
 
     <!-- <jaxb.core.version>2.2.11</jaxb.core.version> <jaxb.impl.version>2.2.11</jaxb.impl.version> 
       <jaxb.runtime.version>2.2.11</jaxb.runtime.version> -->
-    <java.version>11</java.version>
+    <java.version>17</java.version>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
 
@@ -59,13 +59,13 @@
     <maven.jgitflow.plugin.version>1.0-m1.1</maven.jgitflow.plugin.version>
     <maven.plugin.annotations.version>3.6.0</maven.plugin.annotations.version>
     <maven.plugin.api.version>3.6.2</maven.plugin.api.version>
-    <maven.plugin.plugin.version>3.6.0</maven.plugin.plugin.version>
+    <maven.plugin.plugin.version>3.9.0</maven.plugin.plugin.version>
     <maven.properties.plugin.version>1.0-alpha-2</maven.properties.plugin.version>
     <maven.resources.plugin.version>2.7</maven.resources.plugin.version>
-    <maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
+    <maven.surefire.plugin.version>3.0.0-M7</maven.surefire.plugin.version>
     <maven.truezip.plugin.version>1.2</maven.truezip.plugin.version>
     <maven.versions.plugin.version>2.3</maven.versions.plugin.version>
-    <maven.war.plugin.version>2.6</maven.war.plugin.version>
+    <maven.war.plugin.version>3.4.0</maven.war.plugin.version>
     <mysql.connector.version>8.0.33</mysql.connector.version>
     <net.sf.trove4j.version>3.0.3</net.sf.trove4j.version>
     <org.apache.commons.lang3.version>3.9</org.apache.commons.lang3.version>
@@ -196,6 +196,7 @@
         <groupId>org.apache.maven</groupId>
         <artifactId>maven-plugin-api</artifactId>
         <version>${maven.plugin.api.version}</version>
+        <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>org.apache.maven.plugin-tools</groupId>
@@ -421,7 +422,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
+          <version>3.10.1</version>
           <configuration>
             <release>${java.version}</release>
           </configuration>
@@ -449,6 +450,9 @@
             <argLine>
               --illegal-access=permit
             </argLine>
+            <argLine>
+            	--add-opens java.base/java.lang=ALL-UNNAMED
+            </argLine>   
           </configuration>
         </plugin>
 
